--- a/back/package.json
+++ b/back/package.json
@@ -2,7 +2,6 @@
   "type": "module",
   "name": "back",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,5 +13,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2"
-  }
+  },
+  "description": ""
 }
